--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 00:05:02 2018</p>
+         Last Run: Fri Nov 16 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -31,46 +31,46 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-12</td>
-                        <td>-16</td>
+                        <td>-11</td>
+                        <td>-15</td>
                         <td>4</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>1</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>3</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>2</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>1</td>
-                        <td>68</td>
+                        <td>2</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -102,10 +102,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-16",
-                 "-14",
+                 "-15",
+                 "-13",
                  "-11",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -115,10 +115,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
-                 "-10",
+                 "-11",
+                 "-9",
                  "-7",
-                 "-3"
+                 "-4"
                ]
              }
            ]
@@ -178,7 +178,7 @@
                "data":[
                  "4",
                  "3",
-                 "1",
+                 "2",
                  "1"
                ]
              },
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
-                 "81",
-                 "68",
-                 "53"
+                 "87",
+                 "80",
+                 "69",
+                 "54"
                ]
              },
              {
@@ -200,9 +200,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "2",
+                 "3",
                  "4",
+                 "5",
                  "4"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 00:05:02 2018</p>
+         Last Run: Fri Nov 16 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -270,33 +270,33 @@
                         <td>0</td>
                         <td>46</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>60</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>8</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>60</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>41</td>
-                        <td>1</td>
+                        <td>43</td>
+                        <td>0</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>59</td>
+                        <td>WNW</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -324,7 +324,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "3",
-                 "6",
+                 "5",
                  "6"
                ]
              },
@@ -406,8 +406,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "46",
-                 "42",
-                 "41"
+                 "43",
+                 "43"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "60",
-                 "59"
+                 "65",
+                 "67",
+                 "67"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 00:05:02 2018</p>
+         Last Run: Fri Nov 16 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -481,37 +481,37 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
-                        <td>-4</td>
+                        <td>-3</td>
                         <td>2</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
-                        <td>-5</td>
+                        <td>-4</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>12</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>1</td>
-                        <td>68</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>2</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-3",
                  "-4",
-                 "-5",
-                 "-5"
+                 "-6"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "0",
                  "-1",
-                 "-1"
+                 "-2"
                ]
              }
            ]
@@ -611,7 +611,7 @@
                "data":[
                  "2",
                  "2",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -621,8 +621,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "67",
-                 "68"
+                 "68",
+                 "70"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "12",
-                 "13"
+                 "16",
+                 "16",
+                 "17"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 00:05:02 2018</p>
+         Last Run: Fri Nov 16 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -694,39 +694,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
-                        <td>1</td>
-                        <td>-3</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>1</td>
                         <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>90</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>1</td>
-                        <td>65</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>WSW</td>
-                        <td>91</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-1</td>
-                        <td>-5</td>
                         <td>1</td>
                         <td>66</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>92</td>
+                        <td>60</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-1</td>
+                        <td>-5</td>
+                        <td>1</td>
+                        <td>66</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-4",
                  "-5"
                ]
@@ -765,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "-1"
                ]
@@ -836,7 +836,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "63",
-                 "65",
+                 "66",
                  "66"
                ]
              },
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "90",
-                 "91",
-                 "92"
+                 "60",
+                 "60",
+                 "59"
                ]
              }
            ]
