--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 03:05:03 2018</p>
+         Last Run: Fri Nov 16 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-11</td>
                         <td>-15</td>
                         <td>4</td>
-                        <td>87</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>3</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -49,8 +49,8 @@
                         <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>4</td>
+                        <td>WSW</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -70,7 +70,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
+                 "85",
                  "80",
                  "69",
-                 "54"
+                 "55"
                ]
              },
              {
@@ -200,9 +200,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
-                 "4",
                  "5",
+                 "7",
+                 "4",
                  "4"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 03:05:03 2018</p>
+         Last Run: Fri Nov 16 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,8 +289,8 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
                         <td>42</td>
                         <td>0</td>
@@ -325,7 +325,7 @@
                "data":[
                  "4",
                  "5",
-                 "6"
+                 "9"
                ]
              },
              {
@@ -337,7 +337,7 @@
                "data":[
                  "7",
                  "8",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -416,7 +416,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
+                 "65",
                  "67",
                  "66"
                ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 03:05:03 2018</p>
+         Last Run: Fri Nov 16 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -483,7 +483,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -620,7 +620,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "66",
                  "68",
                  "70"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 03:05:03 2018</p>
+         Last Run: Fri Nov 16 04:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
