--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 04:05:05 2018</p>
+         Last Run: Fri Nov 16 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>4</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -201,9 +201,9 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "5",
-                 "7",
-                 "4",
-                 "4"
+                 "6",
+                 "1",
+                 "1"
                ]
              }
            ]
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 04:05:05 2018</p>
+         Last Run: Fri Nov 16 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,11 +268,11 @@
                         <td>7</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>W</td>
-                        <td>65</td>
+                        <td>16</td>
+                        <td>WNW</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -283,20 +283,20 @@
                         <td>42</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>W</td>
-                        <td>67</td>
+                        <td>WNW</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>9</td>
-                        <td>9</td>
+                        <td>8</td>
+                        <td>6</td>
                         <td>0</td>
                         <td>42</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>66</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -325,7 +325,7 @@
                "data":[
                  "4",
                  "5",
-                 "9"
+                 "6"
                ]
              },
              {
@@ -337,7 +337,7 @@
                "data":[
                  "7",
                  "8",
-                 "9"
+                 "8"
                ]
              }
            ]
@@ -405,7 +405,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "43",
                  "42",
                  "42"
                ]
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "64",
                  "65",
-                 "67",
-                 "66"
+                 "65"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 04:05:05 2018</p>
+         Last Run: Fri Nov 16 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -482,20 +482,20 @@
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>1</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>2</td>
-                        <td>68</td>
+                        <td>1</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -504,10 +504,10 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -540,7 +540,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-6"
+                 "-4"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "0",
                  "-1",
-                 "-2"
+                 "-1"
                ]
              }
            ]
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "2"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "64",
                  "66",
-                 "68",
-                 "70"
+                 "68"
                ]
              },
              {
@@ -631,7 +631,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
+                 "15",
                  "16",
                  "17"
                ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov 16 04:05:05 2018</p>
+         Last Run: Fri Nov 16 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -695,14 +695,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>-3</td>
-                        <td>1</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>60</td>
+                        <td>SW</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -712,21 +712,21 @@
                         <td>1</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>59</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -753,7 +753,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-4",
                  "-5"
                ]
@@ -765,7 +765,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "-1"
                ]
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
                  "65",
-                 "66"
+                 "65",
+                 "64"
                ]
              },
              {
@@ -846,9 +846,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "60",
-                 "59"
+                 "62",
+                 "61",
+                 "61"
                ]
              }
            ]
